Add mood-based recommendations with genre filtering

--- a/static/index.html
+++ b/static/index.html
@@ -17,6 +17,13 @@
         <div class="input-group">
             <input type="text" id="userId" placeholder="User ID (e.g., 1)" value="1">
             <input type="text" id="sessionId" placeholder="Session ID (e.g., session1)" value="session1">
+            <select id="mood">
+                <option value="neutral">Neutral</option>
+                <option value="happy">Happy 😊</option>
+                <option value="sad">Sad 😢</option>
+                <option value="angry">Angry 😠</option>
+                <option value="excited">Excited 🤩</option>
+            </select>
             <button id="getRecommendations">Get Recommendations</button>
         </div>
         
