--- a/static/index.html
+++ b/static/index.html
@@ -16,13 +16,16 @@
         
         <div class="input-group">
             <input type="text" id="userId" placeholder="User ID (e.g., 1)" value="1">
-            <input type="text" id="sessionId" placeholder="Session ID (e.g., session1)" value="session1">
+            <input type="text" id="sessionId" placeholder="Session ID (e.g., session1 or any unique string)" value="session1">
+            <button id="newSession">New Session</button>
             <select id="mood">
-                <option value="neutral">Neutral</option>
-                <option value="happy">Happy 😊</option>
-                <option value="sad">Sad 😢</option>
-                <option value="angry">Angry 😠</option>
-                <option value="excited">Excited 🤩</option>
+                <option value="neutral">Neutral - Any genre</option>
+                <option value="happy">Happy 😊 - Comedy, Animation, Musical</option>
+                <option value="sad">Sad 😢 - Drama, Romance</option>
+                <option value="angry">Angry 😠 - Action, Thriller, Crime</option>
+                <option value="excited">Excited 🤩 - Adventure, Sci-Fi, Fantasy</option>
+                <option value="relaxed">Relaxed 😌 - Documentary, Family</option>
+                <option value="scared">Scared 😱 - Horror</option>
             </select>
             <button id="getRecommendations">Get Recommendations</button>
         </div>
