Refactor: Replace user_id/session_id with user name-based personalization
- Remove user_id and session_id parameters (simplified for academic demo)
- Add user name input (e.g., 'Adi') for personalized recommendations
- Database schema: user_name + mood replaces user_id + session_id
- Smart recommendation logic:
  * Liked movies (rating >= 4) appear first for same user + mood
  * Disliked movies (rating <= 2) are filtered out for same user + mood
  * Auto-refresh after feedback to show updated recommendations
- Updated all layers: domain, application, infrastructure, interface
- Fixed emoji encoding issues in JSON responses
- Test script added for API validation

--- a/static/index.html
+++ b/static/index.html
@@ -11,13 +11,11 @@
         <h1>🤖 Personal Movie Recommender Agent</h1>
         
         <div class="description">
-            <p>Welcome to your AI-powered movie recommender! Enter your User ID (1-610) and a Session ID to get personalized movie recommendations. The agent learns from your feedback to improve over time.</p>
+            <p>Welcome to your AI-powered movie recommender! Enter your name and select your mood to get personalized movie recommendations. The agent learns from your feedback to improve over time.</p>
         </div>
         
         <div class="input-group">
-            <input type="text" id="userId" placeholder="User ID (e.g., 1)" value="1">
-            <input type="text" id="sessionId" placeholder="Session ID (e.g., session1 or any unique string)" value="session1">
-            <button id="newSession">New Session</button>
+            <input type="text" id="userName" placeholder="Your Name (e.g., Adi)" value="">
             <select id="mood">
                 <option value="neutral">Neutral - Any genre</option>
                 <option value="happy">Happy 😊 - Comedy, Animation, Musical</option>
